# do-copy

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: US-live-ecs-deployment.yml  ecs-deploy.yml
app/: firebase_connection.py  mongo_connection.py  postgres_connection.py  queue_service.py  redis_connection.py  server.py  synced_db_connection.py  synced_write_db_connection.py
app/api/: agent_router.py  health_router.py  main_router.py  redis_router.py  report_router.py  upload_router.py
app/data/: appointment_times.json  ssl.json  standard_ports.json
app/middlewares/: authorization.py  newrelic.py
app/mongo_services/: constant.py  load_service.py  mongo_service.py  trip_service.py
app/postgres_services/: configurations_service.py  drayage_intelligence_service.py  driver_eta_service.py  driver_rotation_service.py  driver_schedule_service.py  driver_service.py  schedule_plan_service.py  store_driver_plan.py  store_schedule_input.py  (+2 more)
load_optimizer/: get_optimal_plan_v2.py  get_optimal_plan_v3.py
load_scheduler/: getOptimalLoad.py  scheduler_export_training.ipynb  scheduler_import_training.ipynb  utility.py
resources/: GreedyAlg.py  POC.py  dispatch_optimize.py  driver_optimizer_DP_Greedy.py  golden_data.json  nextMoveClassifier.py
terraform/: .terraform.lock.hcl  data.tf  ecr.tf  ecs-service.tf  iam.tf  main.tf  output.tf  providers.tf  terraform.tf
vrp_optimizer/: assumptions.py  constraint_components.py  helpers.py  mapping.py  optimizer.py  routing_distance.py  services.py  unplanned_moves.py
(+37 files in other folders)
