[tool.poetry]
name = "dispatch-automation"
version = "0.1.0"
description = ""
authors = ["Jemish Dungrani <87633950+djemish1@users.noreply.github.com>"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "0.4.9.6"
fastapi = "0.114.1"
black = "24.8.0"
uvicorn = "0.30.6"
pydantic-settings = "2.5.2"
pydantic = "2.9.1"
pandas = "2.2.3"
matplotlib = "3.9.2"
seaborn = "0.13.2"
scikit-learn = "1.3.1"
sqlalchemy = "2.0.36"
python-multipart = "0.0.19"
motor = "3.6.0"
pyjwt = "2.10.1"
xgboost = "1.7.6"
newrelic = "10.4.0"
pytz = "2024.2"
category-encoders = "2.6.4"
boto3 = "1.35.86"
asyncpg = "0.30.0"
requests = "2.32.3"
redis = "5.2.1"
geopy = "2.4.1"
line-profiler = "4.2.0"
pika = "1.3.2"
ortools = "^9.12.4544"
xlsxwriter = "^3.2.3"
aiohttp = "^3.12.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
skip-string-normalization = false
string-normalization = true
